--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Presento</title>
 
-  <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="/css/style.css" rel="stylesheet" />
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -38,14 +38,16 @@
     integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
   <!-- header -->
+
+  </div>
   <header>
     <nav class="navbar navbar-expand-lg bg-white">
-      <div class="container-fluid">
+      <div class="container-fluid ">
         <a class="navbar-brand headerTitle ms-5 ps-2" href="#">Presento<span>.</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,39 +101,45 @@
   <!-- home -->
   <main>
     <div class="hero">
-      <img src="/images/hero-bg.jpg" class="section" />
+      <img src="images/hero-bg.jpg" class="section" />
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
-            <h2>Bettter digital experience with Presento</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
-            <div class="getStarted">
-              <a href="" class="getStarted-btn">Get Started</a>
-              <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
-                class="glightbox btn-watch-video d-flex align-items-center"><i
-                  class="fa-regular fa-circle-play"></i><span>Watch
-                  Video</span></a>
+          <div  data-aos="fade-up"
+          data-aos-duration="3000">
+
+            <div class="col-lg-6 ">
+              <h2>Bettter digital experience with Presento</h2>
+              <p>We are team of talented designers making websites with Bootstrap</p>
+              <div class="getStarted">
+                <a href="" class="getStarted-btn">Get Started</a>
+                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
+                  class="glightbox btn-watch-video d-flex align-items-center"><i
+                    class="fa-regular fa-circle-play"></i><span>Watch
+                    Video</span></a>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
 
     </div>
   </main>
   <!-- client section -->
+
   <section class="client">
-    <div class="container">
+    <div class="container" data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="row">
         <div class="owl-carousel owl-theme">
-          <div class="item"><img src="/images/clients/client-1.png" /></div>
-          <div class="item"><img src="/images/clients/client-2.png" /></div>
-          <div class="item"><img src="/images/clients/client-3.png" /></div>
-          <div class="item"><img src="/images/clients/client-4.png" /></div>
-          <div class="item"><img src="/images/clients/client-5.png" /></div>
-          <div class="item"><img src="/images/clients/client-6.png" /></div>
-          <div class="item"><img src="/images/clients/client-7.png" /></div>
-          <div class="item"><img src="/images/clients/client-8.png" /></div>
-
+          <div class="item"><img src="images/clients/client-1.png" /></div>
+          <div class="item"><img src="images/clients/client-2.png" /></div>
+          <div class="item"><img src="images/clients/client-3.png" /></div>
+          <div class="item"><img src="images/clients/client-4.png" /></div>
+          <div class="item"><img src="images/clients/client-5.png" /></div>
+          <div class="item"><img src="images/clients/client-6.png" /></div>
+          <div class="item"><img src="images/clients/client-7.png" /></div>
+          <div class="item"><img src="images/clients/client-8.png" /></div>
         </div>
 
       </div>
@@ -139,7 +147,8 @@
   </section>
   <!-- about -->
   <section class="about dark-background mt-5" id="about">
-    <div class="container  pb-5">
+    <div class="container  pb-5" data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="row pt-4">
         <div class="col-lg-5 about-left mt-5">
           <h3>Voluptatem dignissimos provident quasi</h3>
@@ -179,7 +188,8 @@
   </section>
   <!-- statics -->
   <section class="statics mt-5 pt-4 mb-5 pb-4">
-    <div class="container">
+    <div class="container" data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="row">
         <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center ">
           <i class="fa-regular fa-face-smile icon"></i>
@@ -231,7 +241,8 @@
 
   <!-- tabs -->
   <section class="tabs pt-5 pb-5 mb-5">
-    <div class="container">
+    <div class="container" data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="row">
         <div class="col-md-6 col-sm-12 col-lg-3 mb-3">
           <a class="d-flex tabBag" style="background-color: #e03a3c; color:white; border:none">
@@ -267,7 +278,8 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container"  data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="row">
         <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
           <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
@@ -293,14 +305,15 @@
           </p>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 text-center">
-          <img src="/images/working-1.jpg" alt="" class="img-fluid tab-img">
+          <img src="images/working-1.jpg" alt="" class="img-fluid tab-img">
         </div>
       </div>
     </div>
   </section>
   <!-- services -->
   <section class="services pb-2 mb-5" id="services">
-    <div class="container pt-5 pb-5 mb-5">
+    <div class="container pt-5 pb-5 mb-5" data-aos="fade-up"
+    data-aos-duration="3000">
       <h2>SERVICES</h2>
       <p class="servicesPara mb-5">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       <div class="row services-box">
@@ -349,16 +362,18 @@
   </section>
   <!-- testimonials -->
   <section class="testimonials mb-5 pb-5">
-    <div class="container mt-5 pt-5 mb-5 testimonialsTitle">
+    <div class="container mt-5 pt-5 mb-5 testimonialsTitle" data-aos="fade-up"
+    data-aos-duration="3000">
       <h2>TESTIMONIALS</h2>
       <p class="testimonialsTitle-para mt-3 mb-5">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
         consectetur velit</p>
     </div>
-    <div class="container">
+    <div class="container"  data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="owl-carousel owl-theme new">
         <div class="item">
           <div class="testimonial-item">
-            <img src="/images/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+            <img src="images/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
             <h3>Saul Goodman</h3>
             <h4>Ceo &amp; Founder</h4>
             <div class="stars">
@@ -376,7 +391,7 @@
         </div>
         <div class="item">
           <div class="testimonial-item">
-            <img src="/images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+            <img src="images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
             <h3>Sara Wilsson</h3>
             <h4>Designer</h4>
             <div class="stars">
@@ -394,7 +409,7 @@
         </div>
         <div class="item">
           <div class="testimonial-item">
-            <img src="/images/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+            <img src="images/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
             <h3>Jena Karlis</h3>
             <h4>Store Owner</h4>
             <div class="stars">
@@ -412,7 +427,7 @@
         </div>
         <div class="item">
           <div class="testimonial-item">
-            <img src="/images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+            <img src="images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Matt Brandon</h3>
             <h4>Freelancer</h4>
             <div class="stars">
@@ -430,7 +445,7 @@
         </div>
         <div class="item">
           <div class="testimonial-item">
-            <img src="/images/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+            <img src="images/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
             <h3>John Larson</h3>
             <h4>Entrepreneur</h4>
             <div class="stars">
@@ -451,11 +466,13 @@
   </section>
   <!-- pricing -->
   <section class="pricing pt-5 pb-5 mb-5">
-    <div class="container pt-5">
+    <div class="container pt-5" data-aos="fade-up"
+    data-aos-duration="3000">
       <h2>PRICING</h2>
       <p class="pricePara pt-3">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
     </div>
-    <div class="container pt-5">
+    <div class="container pt-5"  data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="row">
         <div class="col-lg-4 mt-5">
           <div class="pricing-item">
@@ -504,11 +521,13 @@
   </section>
   <!-- FAQ -->
   <section class="faq mb-5 pb-5">
-    <div class="container">
+    <div class="container" data-aos="fade-up"
+    data-aos-duration="3000">
       <h2 class="faqTitle pb-3 pt-5">Frequently Asked Questions</h2>
       <p class="faqPara pb-4">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
     </div>
-    <div class="container">
+    <div class="container"  data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
@@ -558,12 +577,14 @@
   </section>
   <!-- contact -->
   <section class="contact mb-5" id="contact">
-    <div class="container">
+    <div class="container"  data-aos="fade-up"
+    data-aos-duration="3000">
       <h2 class="contactTitle">CONTACT</h2>
       <p class="contactPara mt-3 mb-5">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit
       </p>
     </div>
-    <div class="container">
+    <div class="container" data-aos="fade-up"
+     data-aos-duration="3000">
       <div class="row">
         <div class="col-lg-6">
           <div class="row">
@@ -594,21 +615,22 @@
         <div class="col-lg-6 contactRight mt-4">
           <form class="form p-3 pb-0 pt-0">
             <div class="row ">
-              <div class="col-md-6 ps-2 pe-2  mt-2"><input type="email" class="form-control " name="email" placeholder="Your Name"
-                  required="" fdprocessedid="2tgaqm">
-               </div>
-               <div class="col-md-6 ps-2 pe-2 mt-2"><input type="email" class="form-control" name="email" placeholder="Your Email"
-                required="" fdprocessedid="2tgaqm">
-             </div>
-             <div class="col-md-12  ps-2 pe-2 mt-3">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="" fdprocessedid="2v1p3gg">
-            </div>
-            <div class="col-md-12 mt-3 mb-4 ps-2 pe-2 ">
-              <textarea class="form-control" name="message" rows="4" placeholder="Message" required=""></textarea>
-            </div>
-            <div class="d-flex flex-column justify-content-center align-items-center">
-              <button type="submit" fdprocessedid="sdfzkb" class="formBtn">Send Message</button>
-            </div>
+              <div class="col-md-6 ps-2 pe-2  mt-2"><input type="email" class="form-control " name="email"
+                  placeholder="Your Name" required="" fdprocessedid="2tgaqm">
+              </div>
+              <div class="col-md-6 ps-2 pe-2 mt-2"><input type="email" class="form-control" name="email"
+                  placeholder="Your Email" required="" fdprocessedid="2tgaqm">
+              </div>
+              <div class="col-md-12  ps-2 pe-2 mt-3">
+                <input type="text" class="form-control" name="subject" placeholder="Subject" required=""
+                  fdprocessedid="2v1p3gg">
+              </div>
+              <div class="col-md-12 mt-3 mb-4 ps-2 pe-2 ">
+                <textarea class="form-control" name="message" rows="4" placeholder="Message" required=""></textarea>
+              </div>
+              <div class="d-flex flex-column justify-content-center align-items-center">
+                <button type="submit" fdprocessedid="sdfzkb" class="formBtn">Send Message</button>
+              </div>
             </div>
           </form>
         </div>
@@ -616,71 +638,74 @@
     </div>
   </section>
   <!-- footer -->
-   <footer class="footer pt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 footer-about">
-            <a href="index.html" class="logo d-flex align-items-center mb-3">
-              <span class="sitename">Presento</span>
-            </a>
-            <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
-              <p class="mt-3">Phone: +1 5589 55488 55</p>
-              <p>Email: info@example.com</p>
+  <footer class="footer pt-5">
+    <div class="container"  data-aos="fade-up"
+    data-aos-duration="3000">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="index.html" class="logo d-flex align-items-center mb-3">
+            <span class="sitename">Presento</span>
+          </a>
+          <div class="footer-contact pt-3">
+            <p>A108 Adam Street</p>
+            <p>New York, NY 535022</p>
+            <p class="mt-3">Phone: +1 5589 55488 55</p>
+            <p>Email: info@example.com</p>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-3 footer-links mt-4">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#">Terms of service</a></li>
+            <li><a href="#">Privacy policy</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2  mt-4 footer-services">
+          <h4>Our Services</h4>
+          <ul>
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">Web Development</a></li>
+            <li><a href="#">Product Management</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Graphic Design</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-4  mt-4 footer-news">
+          <h4>Our Newsletter</h4>
+          <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+          <form>
+            <div>
+              <input type="email" name="email" fdprocessedid="ca43g">
+              <input type="submit" class="footer-btn" value="Subscribe" fdprocessedid="fim3r8">
             </div>
-          </div>
-          <div class="col-lg-2 col-md-3 footer-links mt-4">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#about">About us</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-2  mt-4 footer-services">
-            <h4>Our Services</h4>
-            <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4  mt-4 footer-news">
-            <h4>Our Newsletter</h4>
-            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-            <form>
-              <div>
-                <input type="email" name="email" fdprocessedid="ca43g">
-                <input type="submit" class="footer-btn" value="Subscribe" fdprocessedid="fim3r8">
-              </div>
-            </form>
-          </div>
+          </form>
         </div>
       </div>
-      <div class="container">
-        <div class="row mt-5 text-center">
-          <p>© <span>Copyright</span>Presento <span>All Rights Reserved</span></p>
-          <div class="credits"> Designed by Perumal Raja</div>
-           
-          </div>
-        </div>
+    </div>
+    <div class="container">
+      <div class="row mt-5 text-center">
+        <p>© <span>Copyright</span>Presento <span>All Rights Reserved</span></p>
+        <div class="credits"> Designed by Perumal Raja</div>
+
       </div>
-   </footer>
+    </div>
+    </div>
+  </footer>
 </body>
 
-<script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- owl carousel script -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
   integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
+
   $('.new').owlCarousel({
     loop: true,
     margin: 10,
@@ -715,6 +740,9 @@
       }
     }
   })
+</script>
+<script>
+  AOS.init();
 </script>
 <!--------->
 
